# rune-desktop-app

./: .gitignore  Cargo.toml  Makefile  README.md  latest.json  package.json  pnpm-lock.yaml
.github/workflows/: build-and-sign.yml  deploy-engine-service.yml  deploy-gatekeeper-service.yml
apps/engine_service/: Cargo.toml  Dockerfile  README.md
apps/engine_service/src/: app_module.rs  app_router.rs  lib.rs  main.rs
apps/engine_service/src/language_model/: anthropic_service.rs  language_model_controller.rs  language_model_service.rs  mod.rs  openai_service.rs
apps/engine_service/src/shared/: mod.rs
apps/gatekeeper_service/: Cargo.toml  Dockerfile  README.md
apps/gatekeeper_service/src/: app_router.rs  main.rs  proxy_handler.rs
apps/gatekeeper_service/src/shared/: auth_middleware.rs
apps/rune_desktop_app/: README.md  latest.json  package.json
apps/rune_desktop_app/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist
apps/rune_desktop_app/src-tauri/capabilities/: default.json
apps/rune_desktop_app/src-tauri/src/: lib.rs  main.rs
infra/engine_service/: configmap.yml  deployment.yml  secrets.yml  service.yml
infra/gatekeeper_service/: configmap.yml  deployment.yml  secrets.yml  service.yml
libs/rune_llm/: Cargo.toml
libs/rune_llm/src/: anthropic.rs  lib.rs  ollama.rs  openai.rs  rune_api.rs
libs/rune_whisper/: Cargo.toml
libs/rune_whisper/src/: lib.rs  multilingual.rs
libs/rune_whisper_local/: Cargo.toml
libs/rune_whisper_local/src/: decoder.rs  lib.rs  model.rs
src/: App.tsx  global.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs  state.rs
src-tauri/src/audio/: devices.rs  manager.rs  mod.rs  recorder.rs  transcriber.rs  whisper_transcriber.rs
src-tauri/src/commands/: audio.rs  audio_commands.rs  mod.rs  system.rs  system_commands.rs
src-tauri/src/config/: mod.rs
src-tauri/src/controllers/: audio_pipleine_controller.rs  mod.rs
src-tauri/src/core/: mod.rs  state_machine.rs
src-tauri/src/core/app/: mod.rs  settings.rs  setup.rs  state.rs
src-tauri/src/core/config/: mod.rs
src-tauri/src/core/error/: mod.rs
src-tauri/src/core/system/: mod.rs  permission_manager.rs  permissions.rs  shortcut_manager.rs  system_tray_manager.rs  tray_manager.rs  window.rs  window_manager.rs  window_styler.rs
src-tauri/src/core/utils/: audio.rs  updater.rs
src-tauri/src/events/: emitter.rs  listeners.rs  mod.rs  types.rs
src-tauri/src/handlers/: mod.rs  recording_pipeline_handler.rs  shortcut_handler.rs
src-tauri/src/input/: mod.rs  shortcuts.rs  text.rs
src-tauri/src/io/: mod.rs  shortcuts.rs  text_injector.rs
src-tauri/src/old/: audio_devices.rs  audio_recorder.rs  audio_transcriber.rs  lib.rs  main.rs  permissions.rs  shortcuts.rs  text_injector.rs
src-tauri/src/prompts/: action_checker.rs  mod.rs  text_generator.rs  text_generator_prompt.rs  text_intent_detector_prompt.rs  text_transformer.rs  text_transformer_prompt.rs
src-tauri/src/services/: action_intent_detector_service.rs  audio_device_service.rs  audio_recording_service.rs  mod.rs  recording_service.rs  text_generator_service.rs  text_injector_service.rs  text_processing_service.rs  text_transcript_history_service.rs  text_transformation_service.rs
src-tauri/src/system/: mod.rs  permissions.rs  window.rs
src-tauri/src/text/: mod.rs  text_generator.rs  text_injector.rs  text_intent_detector.rs  text_processor_pipeline.rs  text_transformer.rs
src-tauri/src/utils/: paths.rs
src/components/ui/: alert.tsx  card.tsx  select.tsx
src/windows/history/: HistoryView.tsx
src/windows/main/: MainWindow.tsx
src/windows/onboarding/steps/: CompletionStep.tsx  PermissionsStep.tsx  ProfileStep.tsx
src/windows/settings/: SettingsWindow.tsx  types.ts
src/windows/settings/AccessibilitySettings/: AccessibilitySettings.tsx
src/windows/settings/AudioSettings/: AudioSettings.tsx
src/windows/settings/HotkeySettings/: HotkeyRecorder.tsx  HotkeySettings.tsx
(+43 files in other folders)
