[package]
name = "rune"
version = "0.1.4"
description = "Dictation + Actions + Speech Recognition in an app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15.3"
hound = "3.5.1"
chrono = "0.4.39"
cocoa = "0.25.0"
tauri-plugin-global-shortcut = { version = "2" }
rune_whisper_local = { path = "../libs/rune_whisper_local" }
rune_llm = { path = "../libs/rune_llm" }
wav = "1.0.1"
anyhow = "1.0.95"
rubato = { version = "0.16.1", features = ["fft_resampler"] }
parking_lot = "0.12.3"
enigo = "0.3.0"
clipboard = "0.5.0"
macos-accessibility-client = "0.0.1"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
thiserror = "2.0.11"
env_logger = "0.11.6"
log = "0.4.25"
crossbeam-channel = "0.5.14"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3.31"
reqwest = { version = "0.12", features = ["json"] }
bytes = "1.10.1"
url = "2.5.4"
tungstenite = "0.26.2"
http = "1.2.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
