[package]
name = "engine_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.4"
anyhow = "1.0.79"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
chrono = { version = "0.4.34", features = ["serde"] }
tower = { version = "0.4.13", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5.1", features = [
    "add-extension",
    "fs",
    "auth",
    "compression-full",
    "trace",
    "map-request-body",
    "util",
    "cors",
] }
jsonwebtoken = "9.2.0"
jwt = "0.16.0"
bcrypt = "0.15.0"
rand = "0.9.0"
base64 = "0.22.1"
tokio-retry = "0.3.0"
async-trait = "0.1.86"
async-openai = "0.27.2"
mongodb = "3.2.1"
futures = "0.3.31"
futures-util = "0.3.31"
