[package]
name = "rune_whisper_local"
version = "0.1.0"
edition = "2021"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
candle = { git = "https://github.com/huggingface/candle.git", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle.git", package = "candle-nn", version = "0.8.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", package = "candle-transformers", version = "0.8.2" }
anyhow = "1.0.95"
symphonia = { version = "0.5.3", features = ["all"] }
tokenizers = { version = "0.19.1" }
rubato = { version = "0.15.0", optional = true }
intel-mkl-src = { version = "0.8.1", features = [
    "mkl-static-lp64-iomp",
], optional = true }
half = { version = "2.3.1", features = [
    "num-traits",
    "use-intrinsics",
    "rand_distr",
], optional = true }
rand = "0.8.5"
rand_distr = "0.4.3"
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.4.1"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
byteorder = "1.4.3"

[build-dependencies]
anyhow = "1.0.95"
